--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.7
 django-allauth==0.58.2
+django-cloudinary-storage==0.3.0
 django-crispy-forms==2.1
 gunicorn==21.2.0
 oauthlib==3.2.2
