--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.7.2
+black==23.11.0
+click==8.1.7
 cloudinary==1.36.0
 crispy-bootstrap5==2023.10
 dj-database-url==0.5.0
@@ -7,8 +9,10 @@ Django==4.2.7
 django-allauth==0.58.2
 django-cloudinary-storage==0.3.0
 django-crispy-forms==2.1
+django-resized==1.0.2
 gunicorn==21.2.0
 oauthlib==3.2.2
+pathspec==0.11.2
 psycopg2==2.9.9
 PyJWT==2.8.0
 python3-openid==3.2.0
