--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-resized==1.0.2
 gunicorn==21.2.0
 oauthlib==3.2.2
 pathspec==0.11.2
+Pillow==10.1.0
 psycopg2==2.9.9
 PyJWT==2.8.0
 python3-openid==3.2.0
